# test_task

./: .gitignore  README.md  cli_app.py  pyproject.toml  test_parsing.py
